--- a/css/estilo.css
+++ b/css/estilo.css
@@ -41,7 +41,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color:#171a4a ;
   }
   
 li {
