--- a/css/estilo.css
+++ b/css/estilo.css
@@ -16,7 +16,7 @@ Paleta de Cores do mais escuro pro mais claro:
 
 
 body{
-    background-color: #a0a0a0;
+    background-color:#c6c6df;
     margin-left: 10%;
     margin-right: 10%;
 }
