--- a/css/estilo.css
+++ b/css/estilo.css
@@ -40,13 +40,13 @@ p {
 }
 
 h1{
-    color:#415d1a;
+    color:#000000;
     font-size: 2rem;
     text-align: center;
   }
   
 h2{
-    color:#415d1a;
+    color:#000000;
     font-size: 1.5rem;
     opacity: 50%;
 }
