--- a/css/estilo.css
+++ b/css/estilo.css
@@ -32,18 +32,17 @@ header{
     margin-right: 10%;
     margin-top: 5%;
     margin-bottom: 5%;
-   }
-
-
-p {
-
 }
 
+ p{
+        font-family: 'Trocchi', Roboto, 'Times New Roman', Times, serif;
+ }
+    
 h1{
     color:#000000;
     font-size: 2rem;
     text-align: center;
-  }
+}
   
 h2{
     color:#000000;
@@ -51,6 +50,11 @@ h2{
     opacity: 50%;
 }
 
+div {
+    flex-grow: 1;
+    flex-basis: 300px;
+    padding: 0 20px;
+}
 /* Menu/*/
 ul {
     list-style-type: none;
@@ -58,7 +62,7 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color:#171a4a ;
-  }
+}
   
 li {
     float: right;
